--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
 </header>
 
 <div ng-controller="MadLibsController">
-    <section class="word-section">
-        <input type="text" ng-model="female_name" placeholder="Female Name"/>
-        <input type="text" ng-model="job_title" placeholder="Job Title"/>
-        <input type="text" ng-model="tedious_task" placeholder="Tedious Task"/>
-        <input type="text" ng-model="dirty_task" placeholder="Dirty Task"/>
-        <input type="text" ng-model="celebrity" placeholder="Celebrity"/>
-        <input type="text" ng-model="useless_skill" placeholder="Useless Skill"/>
-        <input type="text" ng-model="useless_skill" placeholder="Adjective"/>
-        <input type="text" ng-model="obnoxious_celebrity" placeholder="Obnoxious Celebrity"/>
-        <input type="text" ng-model="huge_number" placeholder="Huge Number"/>
-    </section>
+    <form name="wordsForm" class="word-section" ng-show="!completed" novalidate ng-submit="submitWords()">
+        <input type="text" ng-model="female_name" placeholder="Female Name" required/>
+        <input type="text" ng-model="job_title" placeholder="Job Title" required/>
+        <input type="text" ng-model="tedious_task" placeholder="Tedious Task" required/>
+        <input type="text" ng-model="dirty_task" placeholder="Dirty Task" required/>
+        <input type="text" ng-model="celebrity" placeholder="Celebrity" required/>
+        <input type="text" ng-model="useless_skill" placeholder="Useless Skill" required/>
+        <input type="text" ng-model="useless_skill" placeholder="Adjective" required/>
+        <input type="text" ng-model="obnoxious_celebrity" placeholder="Obnoxious Celebrity" required/>
+        <input type="number" ng-model="huge_number" placeholder="Huge Number" required/>
+        <button>Submit</button>
+    </form>
 
-    <section>
+    <section ng-show="completed">
         <p>
             {{female_name}} was a {{job_title}} who loved technology. Although she loved parts of her job, she absolutely hated  {{tedious_task}} and {{dirty_task}}. So, {{female_name}} met with her life mentor {{celebrity}} who told her to learn how to {{useless_skill}} with Thinkful. Thinkful didn't offer a course on {{useless_skill}} so she studied programming instead. 
         </p>
         <p>
             What a great decision! With her new skills, {{female_name}} built a(n) {{adjective}} robot named {{obnoxiuous_celebrtity}} that not only loved {{dirty_task}} but did it {{huge_number}} faster. 
         </p>
+        <button ng-click="startOver()">Start Over</button>
     </section>
 </div>
 </body>
